Fixed h1 position and size on each page. Resized and positioned menu portrait on mobile view

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -90,7 +90,7 @@
 
     .portrait {
       background-image: url('../img/headshot.JPG');
-      background-color: #B3B6AD;
+      background-color: #AFBBB9;
       background-position-x: 25px;
       background-repeat: no-repeat;
       background-size: 12rem;
